--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 :root {
     --body-color: #0066ff;
     --highlight-color: #F5F5F5;
-    --sub-highlight-color: #C0C0C0;
+    --sub-highlight-color: #888;
 }
 
 body {
